<resources>
    <string name="app_name">MyContacts</string>
    <string name="action_settings">Settings</string>
    <string name="mycontacts">My Contacts</string>
    <string name="action_home">Home</string>
    <string name="action_create_contact">Create Contact</string>
    <string name="title_activity_create_contact">Create Contact</string>
    <string name="action_add_contact">Add Contact</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="addContact">Add Contact</string>
    <string name="title_activity_view_contact">View Contact</string>
    <string name="deleteContact">Delete Contact</string>
</resources>
