<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.administrator.mycontacts.CreateContact">
    <item
        android:id="@+id/action_home"
        android:orderInCategory="1"
        android:title="@string/action_home"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_create_contact"
        android:orderInCategory="2"
        android:title="@string/action_create_contact"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/add_contact"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="3"
        android:title="@string/action_add_contact"
        android:onClick="createContact"
        app:showAsAction="always"
        />
</menu>